# opus

./: LICENSE  README.md  pyproject.toml
data/: utterances_01-parsed.txt  utterances_01.txt
data/parsed/: master.jsonl  master11-Jan-2024-(16-04-46.559918)
data/raw/: utterances_01.txt
magnum/: rxconfig.py
magnum/data/: utterances_00-parsed.txt  utterances_00.txt  utterances_01-parsed.txt
magnum/magnum/: defaults.py  magnum.py  model.py  state.py  utils.py
magnum/magnum/components/: sidebar.py
magnum/magnum/pages/: __init__.py  dashboard.py  index.py  settings.py  verify.py
magnum/magnum/templates/: template.py
opus/: agent.py  api.py  cli.py  defaults.py  io.py  llm.py  model.py  parsing.py  pipelines.py  prompts.py  utils.py
opus/data/: utterances_00-parsed.txt
opus/results/: utterances_00_preprocessed.jsonl  utterances_00_preprocessed_parsed.jsonl
scratchpad/: bdi_based_approach.txt
